# compare_ai

./: README.md  pyproject.toml  pytest.ini
compare_ai/: __init__.py  main.py  results_manager.py
compare_ai/actions/: __init__.py  generate_reports.py  run_predictions.py
compare_ai/data/datasets/: nepali_translation.json
compare_ai/repository/: __init__.py
compare_ai/repository/datasets/: __init__.py  dataset.py  dataset_mmlu.py
compare_ai/repository/evaluation_datasets/: dataset.py  dataset_mmlu.py
compare_ai/repository/models/: __init__.py  definitions.py  model_registry.py  models.py  provider.py  provider_factory.py  providers.py
compare_ai/repository/models/providers/: openai_provider.py
tests/actions/: run_prediction_test.py
tests/repository/datasets/: dataset_mmlu_test.py
tests/repository/models/: model_registry_test.py  provider_factory_test.py
tests/repository/models/providers/: openai_provider_test.py
