[tool.poetry]
name = "compare_ai"
version = "0.0.1"
description = ""
authors = ["santoshdahal2016 <webtutor2016@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
comapre_ai = "compare_ai.main:run"
